--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Streamdata Gallery
+title: Streamdata Gallery Visualizations
 url: visualizations.streamdata.gallery
 tag: Visualizations
 markdown: kramdown
